@@ -1,6 +1,0 @@
-<tal:styles define="view context/@@resourceregistries_kss_view"
-            repeat="kss view/kineticstylesheets">
-    <link rel="stylesheet"
-          data-rel="kinetic-stylesheet"
-          type="text/kss"
-          tal:attributes="href kss/src" /></tal:styles>
